Trying to fix scrollbar on left for Edge

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -10,6 +10,9 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+
+    // trying to fix Edge browser, which wants to show vertical scroll bar on left
+    overflow-y: hidden;
 }
 
 /* The navigation menu links */
